<resources>
    <string name="app_name">Pics for reddit</string>

    <string name="subscribers_format">%1$d subscribers</string>
    <string name="add_subreddit">Add subreddit</string>
    <string name="subreddit_prompt">Enter subreddit name:</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="logging_out">Logging out</string>
    <string name="no_image_posts">No image posts found :(</string>
    <string name="no_image_posts_in_subreddit">No image posts in r/%1$s :(</string>
    <string name="subreddit_freshness">Newest post: %1$s</string>
    <string name="more_images">More!</string>
    <string name="refresh_subreddit_list">Refresh list</string>
    <string name="fetching_subs_progress">Fetching subscribed subs...</string>
    <string name="fetching_sub_posts_progress">Fetching posts (%1$s/%2$s)...</string>
    <string name="sorting_subs_progress">"Sorting subs...</string>
    <string name="splash_text">Pics for reddit: Today\'s reddit images</string>
    <string name="show_nsfw">Show NSFW</string>
    <string name="hide_nsfw">Hide NSFW</string>
    <string name="filter_subreddit_list">Filter subreddits</string>
    <string name="post_view">Go to post view</string>
    <string name="subreddit_view">Go to subreddit view</string>
    <string name="fetching_posts_progress">Fetching posts...</string>
    <string name="post_item_description">On r/%1$s\n(%2$d comments)</string>
    <string name="subreddit_format">r/%1$s</string>
    <string name="comments_format_link"><u>%1$d comments</u></string>
    <string name="nsfw">NSFW</string>
    <string name="random_subreddit">Random sub!</string>
    <string name="subreddit_search_hint">Type subreddit name...</string>
    <string name="clear_search">Clear subreddit filter</string>
    <string name="subreddit_info_bar">Showing r/%1$s</string>
    <string name="fetching_random_subreddit">Fetching a random subreddit...</string>
    <string name="fetching_subreddit_format">Fetching r/%1$s...</string>
    <string name="fetching_front_page">Fetching Front Page...</string>
    <string name="fetching_front_page_with_name">Fetching %1$s\'s Front Page...</string>
    <string name="front_page">Front Page</string>
    <string name="front_page_with_name">%1$s\'s Front Page</string>
    <string name="copy_link">Copy link</string>
    <string name="link_copied">Link copied to clipboard!</string>
    <string name="failed_to_send_vote">We had a problem sending your vote :(. Try logging out, logging back in, and trying again.</string>
    <string name="dismiss">Dismiss</string>

    <!-- Onboarding -->
    <string name="skip">Skip</string>
    <string-array name="onboarding_titles">
        <item>Welcome to the app!</item>
        <item>Pinch-to-zoom images</item>
        <item>Additional image sources</item>
    </string-array>
    <string-array name="onboarding_descriptions">
        <item>This app is really awesome. If you don\'t believe me, use it for a bit and be amazed!</item>
        <item>Now you can use your fingers to zoom an image in!</item>
        <item>Images from Reddit Images now show up in the app!</item>
    </string-array>
</resources>
