<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".SubredditListActivity">
    <item android:id="@+id/menu_item_add_subreddit"
          android:icon="@drawable/ic_menu_add"
          android:title="@string/add_subreddit"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_item_search"
          android:icon="@drawable/ic_search"
          android:title="@string/filter_subreddit_list"
          app:actionViewClass="android.support.v7.widget.SearchView"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_item_refresh_list"
          android:icon="@drawable/ic_refresh"
          android:title="@string/refresh_subreddit_list"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_item_toggle_nsfw"
          android:title="@string/hide_nsfw"
          app:showAsAction="never" />
    <item android:id="@+id/menu_item_log_in"
          android:title="@string/log_in"
          app:showAsAction="never" />
    <item android:id="@+id/menu_item_log_out"
          android:title="@string/log_out"
          app:showAsAction="never" />
    <item android:id="@+id/menu_item_post_view"
          android:title="@string/post_view"
          app:showAsAction="never" />
</menu>
