<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_item_random_subreddit"
          android:icon="@drawable/ic_dice"
          android:title="@string/random_subreddit"
          app:showAsAction="ifRoom" />
    <!--
    <item android:id="@+id/menu_item_toggle_nsfw"
          android:title="@string/hide_nsfw"
          app:showAsAction="never" />-->
    <item android:id="@+id/menu_item_search"
          android:icon="@drawable/ic_search"
          android:title="@string/filter_subreddit_list"
          app:actionViewClass="android.support.v7.widget.SearchView"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_item_clear_search"
          android:title="@string/clear_search"
          android:visible="false"
          app:showAsAction="never" />
    <item android:id="@+id/menu_item_refresh_list"
          android:icon="@drawable/ic_refresh"
          android:title="@string/refresh_subreddit_list"
          app:showAsAction="never" />
    <item android:id="@+id/menu_item_log_in"
          android:title="@string/log_in"
          app:showAsAction="never" />
    <item android:id="@+id/menu_item_log_out"
          android:title="@string/log_out"
          app:showAsAction="never" />
    <item android:id="@+id/menu_item_subreddit_view"
          android:title="@string/subreddit_view"
          app:showAsAction="never" />
</menu>
